fix: dispay of gallery__cards HTML-element on tablet screens

--- a/src/assets/scss/media.scss
+++ b/src/assets/scss/media.scss
@@ -17,12 +17,6 @@
     }
 }
 
-@media (max-width: 1180px) {
-    .gallery__cards {
-        justify-content: space-evenly;
-    }
-}
-
 @media (max-width: 960px) {
     .header.header {
         padding: 60px;
@@ -39,6 +33,12 @@
     }
     .gallery__button {
         margin: 0 auto 100px auto;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .gallery__cards.gallery__cards {
+        justify-content: center;
     }
 }
 
